example/errors/interpret/expected_iterator.box
for a in 555 {
    println("not working");
}
